[tool.poetry]
name = "quantum"
version = "0.1.0"
description = ""
authors = ["ZigaMr <ziga.mrzljak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qiskit = "^0.45.1"
numpy = "^1.26.3"
jupyterlab = "^4.0.10"
matplotlib = "^3.8.2"
pylatexenc = "^2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
